--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
+    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-facebook-token": "^3.3.0",
+    "passport-google-oauth-jwt": "^0.2.3",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
