--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "confusionserver",
+  "name": "IVARAserver",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -25,6 +25,7 @@
     "passport": "^0.4.1",
     "passport-facebook-token": "^3.3.0",
     "passport-google-oauth-jwt": "^0.2.3",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
